--- a/_sources/model_evaluation/tutorials/stats/Usage_DScore_Suite_v1.ipynb
+++ b/_sources/model_evaluation/tutorials/stats/Usage_DScore_Suite_v1.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "1983-10-05  1104200  0.849505  5.952500  1.931588"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,13 +161,14 @@
    "metadata": {},
    "source": [
     "## Import Benchmark Functions\n",
-    "The metric functions are defined and described in an [adjacent notebook](./Metrics_DScore_Suite_v1.ipynb).\n",
+    "The metric functions are defined and described in\n",
+    "{doc}`model_evaluation/Metrics_DScore_Suite_v1`.\n",
     "They are imported here by running that notebook from within the following cell:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +194,7 @@
        "55.73589185136414"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
