--- a/_sources/model_evaluation/tutorials/stats/Usage_StdSuite_v1.ipynb
+++ b/_sources/model_evaluation/tutorials/stats/Usage_StdSuite_v1.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# NWM 'Standard Suite (v1)' Metrics :: Example Usage\n",
     "\n",
-    "This notebook will demonstrate how to call the specific functions defined in the [Standard Suite v1](../../Metrics_StdSuite_v1.ipynb)\n",
+    "This notebook will demonstrate how to call the specific functions defined in the \n",
+    "{doc}`model_evaluation/Metrics_StdSuite_v1`\n",
     "notebook, using a small demonstration dataset."
    ]
   },
