--- a/_sources/model_evaluation/tutorials/nwm_streamflow/03_Vizualization.ipynb
+++ b/_sources/model_evaluation/tutorials/nwm_streamflow/03_Vizualization.ipynb
@@ -230,7 +230,7 @@
     "## Step 2: Load NWM Analysis\n",
     "\n",
     "This table is the collection of evaluation metrics comparing observed vs. modeled streamflow of the cobalt gages. This data is the result\n",
-    "of the [NWM Benchmark Analysis Notebook](NWM_Benchmark_Analysis.ipynb). "
+    "of the [NWM Benchmark Analysis Notebook](02_Analysis_StdSuite.ipynb)."
    ]
   },
   {
