--- a/_sources/model_evaluation/tutorials/stats/Usage_StdSuite_v1.ipynb
+++ b/_sources/model_evaluation/tutorials/stats/Usage_StdSuite_v1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "1983-10-05  1104200  0.849505  5.952500  1.931588"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,13 +140,14 @@
    "metadata": {},
    "source": [
     "## Import Metric Functions\n",
-    "The functions are defined in an [adjacent notebook](./NWM_StandardSuite_v1.ipynb).  They are imported for use here by \n",
-    "running that notebook from within the following cell:"
+    "The functions are defined in an \n",
+    "{doc}`model_evaluation/Metrics_StdSuite_v1`.  \n",
+    "They are imported for use here by running that notebook from within the following cell:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +176,7 @@
        "55.73589185136414"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,16 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3286282290159983"
+       "0.3286282290159971"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,9 +402,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "users-users-pangeo",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-users-users-pangeo-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -415,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
