--- a/_sources/evaluation/tutorials/nwm_streamflow/02_Analysis_StdSuite.ipynb
+++ b/_sources/evaluation/tutorials/nwm_streamflow/02_Analysis_StdSuite.ipynb
@@ -26,12 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import logging"
+    "import logging\n",
+    "import os"
    ]
   },
   {
@@ -51,48 +52,15 @@
     "notebook. We will proceed here using the already-prepared data for _streamflow_, which is included in the HyTEST **intake catalog**.  \n",
     "\n",
     ":::{margin}\n",
-    "Learn more about `intake` [here](/dev/null)\n",
+    "Learn more about `intake` [here](../../../dataset_catalog/README.md)\n",
     ":::\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Available datasets: \n",
-      " conus404-drb-eval-tutorial-catalog\n",
-      "conus404-hourly-onprem\n",
-      "conus404-hourly-cloud\n",
-      "conus404-daily-onprem\n",
-      "conus404-daily-diagnostic-onprem\n",
-      "conus404-daily-cloud\n",
-      "conus404-daily-diagnostic-cloud\n",
-      "conus404-monthly-onprem\n",
-      "conus404-monthly-cloud\n",
-      "nwis-streamflow-usgs-gages-onprem\n",
-      "nwis-streamflow-usgs-gages-cloud\n",
-      "nwm21-streamflow-usgs-gages-onprem\n",
-      "nwm21-streamflow-usgs-gages-cloud\n",
-      "nwm21-streamflow-cloud\n",
-      "nwm21-scores\n",
-      "lcmap-cloud\n",
-      "conus404-hourly-cloud-dev\n",
-      "nhm-v1.0-daymet-byHRU-onprem\n",
-      "nhm-v1.0-daymet-byHW-musk-onprem\n",
-      "nhm-v1.0-daymet-byHW-musk-obs-onprem\n",
-      "nhm-v1.0-daymet-byHW-noroute-onprem\n",
-      "nhm-v1.0-daymet-byHW-noroute_obs-onprem\n",
-      "nhm-v1.1-gridmet-byHRU-onprem\n",
-      "nhm-v1.1-gridmet-byHW-onprem\n",
-      "nhm-v1.1-gridmet-byHWobs-onprem\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import intake\n",
     "cat = intake.open_catalog(r'https://raw.githubusercontent.com/hytest-org/hytest/main/dataset_catalog/hytest_intake_catalog.yml')\n",
@@ -106,7 +74,7 @@
     "The above list represents the processed datasets available for benchmarking.  If a dataset\n",
     "you want is not in that list, \n",
     "you can load the data manually via direct connection to 'on-prem' or S3 object storage. \n",
-    "If you load data from a source other than this list, you can jump to [Step 2: Restrict to a Domain](#step-2-restrict-to-a-domain)\n",
+    "If you load data from a source other than this list, you can jump to [Step 2: Restrict to a Domain](#Step-2:-Restrict-to-a-Domain)\n",
     "\n",
     "Note that the interesting datasets in the cataloged dataset above are duplicated: Some are `-onprem` \n",
     "and some are `-cloud`. Same data, but the storage location and access protocol will be different. You \n",
@@ -455,8 +423,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -468,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
