update with new osn pod paths

--- a/_sources/dataset_access/conus404_point_selection.ipynb
+++ b/_sources/dataset_access/conus404_point_selection.ipynb
@@ -13,7 +13,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "547b851f-3dd9-4b9f-988b-54c743a43bbe",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import fsspec\n",
@@ -190,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "points_df = pd.read_csv('https://usgs.osn.mghpcc.org/usgspod-testbucket/trends_and_drivers/filtered_temperature_sites.csv')\n",
+    "points_df = hytest_cat['pointsample-tutorial-sites-osn'].read()\n",
     "print(len(points_df))\n",
     "points_df.head()"
    ]
@@ -465,7 +467,7 @@
    "source": [
     "fs_write = fsspec.filesystem(\n",
     "    's3',\n",
-    "    profile='osn-usgs',  ## This is the profile name you configured above.\n",
+    "    profile='osn-hytest',  ## This is the name of the AWS profile with credentials to write to the output bucket\n",
     "    client_kwargs={'endpoint_url': 'https://usgs.osn.mghpcc.org/'}\n",
     ")"
    ]
@@ -477,9 +479,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fs_write.ls('usgspod-testbucket')\n",
-    "outfile = f'usgspod-testbucket/trends_and_drivers/daily_skintemp_at_filtered_temperature_sites.nc'\n",
-    "local_file = f'./daily_{var}_at_filtered_temperature_sites.nc'"
+    "fs_write.ls('hytest')\n",
+    "outfile = hytest_cat['pointsample-tutorial-output-osn'].urlpath\n",
+    "local_file = hytest_cat['pointsample-tutorial-output-osn'].urlpath.split('/')[-1]"
    ]
   },
   {
@@ -508,8 +510,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%time\n",
-    "# fs_write.upload(local_file, outfile)"
+    "%%time\n",
+    "fs_write.upload(local_file, outfile)"
    ]
   },
   {
@@ -519,7 +521,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fs_write.ls('usgspod-testbucket/trends_and_drivers/')"
+    "# check that file has been written\n",
+    "fs_write.ls(hytest_cat['pointsample-tutorial-output-osn'].urlpath.split(local_file)[0])"
    ]
   },
   {
@@ -560,26 +563,6 @@
    "source": [
     "ds_final"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9230a094-4dcd-4552-852e-be62cb29e15d",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Shutdown cluster"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c3aff08b-975d-47e1-ac51-6bb8e8b1adbc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#client.close(); cluster.shutdown()"
-   ]
   }
  ],
  "metadata": {
@@ -598,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.13"
   },
   "vscode": {
    "interpreter": {
